# Smart-Weather-Station

./: README.md  S50sshd  S50wifi  build.sh  runqemu.sh  save_config.sh  shared.sh
app/: CMakeLists.txt  Makefile  main.cpp  server.sh
app/dashboard_server/: multi_client_server.cpp  multi_client_server.py  server.py
app/sensor_driver/bme280_processor/: bme280.c  bme280.h
app/sensor_driver/cpp_https_publisher/: publisher_https.cpp  publisher_https.h
app/sensor_driver/cpp_mqtt_publisher/: publisher_mqtt.cpp  publisher_mqtt.h
app/sensor_driver/debug/: debug_tool.c
base_external/: Config.in  external.desc  external.mk
base_external/backup/: dnsmasq.conf
base_external/backup/dhcp/: dhcpd.conf
base_external/backup/hostapd/: hostapd.conf
base_external/backup/init.d/: S80hostapd  S81dnsmasq  S99wifi
base_external/backup/network/: interfaces
base_external/configs/: raspberrypizero2w_custom_defconfig
base_external/rootfs_overlay/etc/: wpa_supplicant.conf
base_external/rootfs_overlay/etc/init.d/: S80httpd  S99mosquitto  S99weather_cpp_server  S99wifi
base_external/rootfs_overlay/etc/mosquitto/: mosquitto.conf
base_external/rootfs_overlay/etc/network/: interfaces
base_external/rootfs_overlay/www/: index.html
